Fix contact button text wrap

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,4 +1,5 @@
 nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -68,6 +69,7 @@ nav .navButton {
   background-color: #7bcfe1;
   padding: 1.5em 2.7em;
   color: #fbfbfb;
+  text-wrap: nowrap;
 }
 
 nav .menu {
@@ -88,7 +90,7 @@ nav .menu span {
   border-radius: 0.2rem;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1024px) {
   nav .menu {
     display: flex;
   }
